# SWRFUSS-Modern

./: .clang-format  .gitmodules  CMakeLists.txt
.ide/: clion-code-style.xml
src/: CMakeLists.txt  act_comm.c  act_info.c  act_move.c  act_obj.c  act_wiz.c  atom_enum.h  atoms.h  bet.h  boards.c  bounty.c  build.c  clans.c  color.c  color.h  comm.c  comments.c  const.c  db.c  dns.c  dns.h  fight.c  handler.c  hashstr.c  hotboot.c  hotboot.h  imc.c  imc.h  imccfg.h  interp.c  magic.c  makeobjs.c  match.h  mccp.c  mccp.h  misc.c  mssp.c  mssp.h  mud.h  mud_comm.c  (+16 more)
